--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header_left">Pratik Raut</div>
             <ul>
-                <li>Home</li>
+                <li><a href="product-gallery.html">Home</a></li>
                 <li>Project</li>
                 <li>About Us</li>
                 <li>Contact Us</li>
