--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&display=swap" rel="stylesheet"> -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
     <title>Pratik Raut</title>
 </head>
 <body>
     <header>
         <div class="header_left">Pratik Raut</div>
             <ul>
-                <li><a href="product-gallery.html">Home</a></li>
+                <li>Home</li>
                 <li>Project</li>
                 <li>About Us</li>
                 <li>Contact Us</li>
             </ul>
     </header>
+    <aside class="contact">
+        <div class="contact_icons">
+            <div class="twitter"></div>
+            <div class="insta"></div>
+            <div class="linked"></div>
+            <div class="facebook"></div>
+            <div class="gmail"></div>
+        </div>
+    </aside>
     <section class="s1">
         <div class="s11">
         <h2>Hi, I'm Nad.</h2>
@@ -32,26 +44,29 @@
     </div>
     <div class="s12"></div>
     </section>
-    <section class="s1">
-        <div class="s11">
-        <h2>Hi, I'm Nad.</h2>
-        <h1>Designer. Product Person.</h1
->
-        <p>Multidisciplinary designer who hacks at, makes and occasionally breaks things.
-            Product Design Director on the team behind matrix.org.</p>
-        <p>Less moody in real life. ✌️</p>
-        <a href="">Learn more   </a>
-    </div>
-    <div class="s12"></div>
+    <section class="s2">
+        <div class="project_img"></div>
+        <div class="project_title">
+            <h2>Farmzone</h2>
+            <h1>E-Commerce Website</h1>
+            <hr>
+            <p>Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness</p>
+            <a href="">To Website
+                <div class="arrow"></div>
+            </a>
+        </div>
     </section>
-<aside class="contact">
-    <div class="contact_icons">
-        <div class="twitter"></div>
-        <div class="insta"></div>
-        <div class="linked"></div>
-        <div class="facebook"></div>
-        <div class="gmail"></div>
-    </div>
-</aside>
+    <section class="s2" style="    grid-template-columns: 40% 60%;">
+        <div class="project_title">
+            <h2>Farmzone</h2>
+            <h1>E-Commerce Website</h1>
+            <hr>
+            <p>Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness</p>
+            <a href="">To Website
+                <div class="arrow"></div>
+            </a>
+        </div>
+        <div class="project_img"></div>
+    </section>
 </body>
 </html>
