--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,8 @@
 </head>
 <body>
     <header>
-        <div class="header_left"></div>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
+       <a href="index.html" class="header_left"></a> 
+           <ul>
                 <li> <a href="./projects.html">Project</a></li>
                 <li>About Us</li>
                 <li>Contact Us</li>
@@ -27,20 +26,50 @@
     <aside class="contact">
         <div class="contact_icons">
             <div class="twitter"></div>
-            <div class="insta"></div>
+            <a class="insta" href="https://www.instagram.com/pratik_1354/" target="_blank" ></a>
             <div class="linked"></div>
-            <div class="facebook"></div>
-            <div class="gmail"></div>
+            <a class="facebook" href="https://www.facebook.com/PratikRaut123" target="_blank" ></a>
+            <a class="gmail" href="mailto:pratikra2001@gmail.com"></a>
         </div>
     </aside>
-    <h1 style="margin-top: 100px; text-align: center;">Projects</h1>
+    <div class="project_page_heading">
+        <h1 style=" text-align: center;font-size: 75px;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;margin: 100px 0px 50px 50px;">“Design is so simple. That’s why it’s so complicated.”</h1><p style="text-align: center;font-size: larger;"> –Paul Rand </p>
+        <p style="text-align: center; font-size: x-large;padding: 0 10%;line-height: 50px;margin: 10% auto;">Hey There ✌️<br>Here are few designs I made. Have a look. If you like my designs and want to work with me here's my <a href="mailto:pratikra2001@gmail.com" style="color: black;">Email</a> or just want to say hii my social media is on the left side of screen.</p>
+    </div>
 <section class="p1">
     <div class="project_no">
         <hr> <h1>01</h1>
     </div>
-    <div class="pc_screen">
-        <div class="screen"></div>
+    <a href="./projects/farmzon/" class="pc_screen" style="color: black;">
+        <div class="screen"></div> 
+    </a>
+    <div class="project_title" style="width: auto;margin-top: 5%;">
+        <h5>FARMZONE</h5>
+        <h1>E-Commerce Website</h1>
+        <hr>
+        <p style="margin: 3% auto;padding: 0% 50%;padding-left: 0%;">Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness. But it is not made for any client it is designed for my university project. I used html, css and bit of javascript in the project. Please remember it is only design without any backend so some function may be restricted.</p>
+        <a href=""class="redirect_button" style="margin: 0%;">To Website
+            <div class="arrow"></div>
+        </a>
     </div>
 </section>
+<section class="p1">
+    <div class="project_no">
+        <hr> <h1>02</h1>
+    </div>
+    <a href="./projects/farmzon/" class="pc_screen" style="color: black;">
+        <div class="screen"></div> 
+    </a>
+    <div class="project_title" style="width: auto;margin-top: 5%;">
+        <h5>FARMZONE</h5>
+        <h1>E-Commerce Website</h1>
+        <hr>
+        <p style="margin: 3% auto;padding: 0% 50%;padding-left: 0%;">Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness. But it is not made for any client it is design for my university project. I used html, css and bit of javascript in the project. </p>
+        <a href=""class="redirect_button" style="margin: 0%;">To Website
+            <div class="arrow"></div>
+        </a>
+    </div>
+</section>
+
 </body>
 </html>
