added collage cards

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&display=swap" rel="stylesheet"> -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,9 +21,9 @@
     <header>
        <a href="index.html" class="header_left"></a> 
             <ul>
-                <li> <a href="./projects.html">Project</a></li>
-                <li>About Us</li>
-                <li>Contact Us</li>
+                <li> <a href="./projects.html">WORK</a></li>
+                <li>ABOUT</li>
+                <li>CONTACT</li>
             </ul>
     </header>
     <aside class="contact">
@@ -32,7 +35,7 @@
             <a class="gmail" href="mailto:pratikra2001@gmail.com"></a>
         </div>
     </aside>
-    <div class="development_warning" id="development_warning">Please Note this site is still under devlopment some function may be missing or not work properly <br> <button onclick="closee()" id="btn1" style="width: 100px;padding: 1%;background-color: #00b6f1;color: white;">CLOSE</button> </div>
+    <!-- <div class="development_warning" id="development_warning">Please Note this site is still under devlopment some function may be missing or not work properly <br> <button onclick="closee()" id="btn1" style="width: 100px;padding: 1%;background-color: #00b6f1;color: white;">CLOSE</button> </div> -->
     <script>
         let a=document.getElementById("development_warning")
         function closee(){
@@ -51,7 +54,39 @@
     </div>
     <div class="s12"></div>
     </section>
-    <h1 style="text-align: center;">PROJECTS</h1>
+    <h1 style="text-align: center;font-family: 'Josefin Sans', sans-serif;font-size: 150px;">WHAT I DO ...</h1>
+    <div class="services">
+        <div class="card_1">
+            <h2>Design You Will love</h2>
+            <p>Your idea my skills lets make something extra oridinary. Let's carve your idea in the reality. My moto is "make simple but beautiful websites"</p>
+            <h1 style="font-size: 85px;margin: 0%;display: inline;">❤️</h1>
+        </div>
+        <div class="card_2">
+            <h2>Design You Will love</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+        </div>
+        <div class="card_3">
+            <h2>Design You Will love</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod doloremque magni culpa, eveniet ad in asperiores ipsam. Quia, iure. Beatae!</p>
+            <div class="outer_frame">
+                <hr>
+            <div class="inner_screen"></div>
+            <div class="home_button"></div>
+        </div>
+        </div>
+        <div class="card_4">
+            <h2>Design You Will love</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+
+        </div>
+        <div class="card_5">
+            <h2>Design You Will love</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod doloremque magni culpa, eveniet ad in asperiores ipsam. Quia, iure. Beatae!</p>
+
+        </div>
+    </div>
+    <!-- <h1 style="text-align: center;">PROJECTS</h1>
     <section class="s2">
         <a href="./projects/farmzon/" class="project_img"></a>
         <div class="project_title">
@@ -87,6 +122,13 @@
                 <div class="arrow"></div>
             </a>
         </div>
+    </section> -->
+    <section class="redirect_page">
+        <h1>
+            <p style="font-size: xx-large;margin:0%;">useful links ↗</p>
+            WORK</h1>
+        <h1 style="text-align: end;">ABOUT</h1>
+        <h1>CONTACT</h1>
     </section>
 </body>
 </html>
