--- a/projects.html
+++ b/projects.html
@@ -16,12 +16,12 @@
 </head>
 <body>
     <header>
-       <a href="index.html" class="header_left"></a> 
-           <ul>
-                <li> <a href="./projects.html">Project</a></li>
-                <li>About Us</li>
-                <li>Contact Us</li>
-            </ul>
+        <a href="index.html" class="header_left"></a> 
+        <ul>
+            <li> <a href="./projects.html">WORK</a></li>
+            <li>ABOUT</li>
+            <li>CONTACT</li>
+        </ul>
     </header>
     <aside class="contact">
         <div class="contact_icons">
