added about page and some minor changes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
        <a href="index.html" class="header_left"></a> 
             <ul>
                 <li> <a href="./projects.html">WORK</a></li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
+                <li> <a href="./about.html"> ABOUT</a></li>
+                <li><a href=""> CONTACT</a></li>
             </ul>
     </header>
     <aside class="contact">
@@ -58,17 +58,17 @@
     <div class="services">
         <div class="card_1">
             <h2>Design You Will love</h2>
-            <p>Your idea my skills lets make something extra oridinary. Let's carve your idea in the reality. My moto is "make simple but beautiful websites"</p>
+            <p>Your idea my skills lets make something extra oridinary. My moto is "make simple but beautiful websites"</p>
             <h1 style="font-size: 85px;margin: 0%;display: inline;">❤️</h1>
         </div>
         <div class="card_2">
-            <h2>Design You Will love</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h2>Healthy freelancing relationship</h2>
+            <p>Communication is the key for any good relationship, its same here.</p>
 
         </div>
         <div class="card_3">
-            <h2>Design You Will love</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod doloremque magni culpa, eveniet ad in asperiores ipsam. Quia, iure. Beatae!</p>
+            <h2>Responsive Design</h2>
+            <p>Responsive design is very essential for a website, it adjust your website for any screen size from laptop,tablets to mobiles. Most of the websites are opened on mobile it must look as beautiful as it looks on wide screen.</p>
             <div class="outer_frame">
                 <hr>
             <div class="inner_screen"></div>
@@ -76,13 +76,13 @@
         </div>
         </div>
         <div class="card_4">
-            <h2>Design You Will love</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h2>Turn your ideas into reality</h2>
+            <p>Your idea is image in your mind. I will help you to make it into reality.</p>
 
         </div>
         <div class="card_5">
-            <h2>Design You Will love</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod doloremque magni culpa, eveniet ad in asperiores ipsam. Quia, iure. Beatae!</p>
+            <h2>Reasonable price</h2>
+            <p style="margin-top: 0%;">I will provide the value for your money. I know money is one of the important asset of your buisness. I make sure you invest it into right person.</p>
 
         </div>
     </div>
@@ -124,11 +124,11 @@
         </div>
     </section> -->
     <section class="redirect_page">
-        <h1>
+        <a href="./projects.html">
             <p style="font-size: xx-large;margin:0%;">useful links ↗</p>
-            WORK</h1>
-        <h1 style="text-align: end;">ABOUT</h1>
-        <h1>CONTACT</h1>
+            WORK</a>
+        <a href="" style="text-align: end;margin-top: -4%;">ABOUT</a>
+        <a href="">CONTACT</a>
     </section>
 </body>
 </html>
