--- a/projects.html
+++ b/projects.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&display=swap" rel="stylesheet"> -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <title>Pratik Raut</title>
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+        <title>Pratik Raut</title>
+    </head>
 <body>
     <header>
         <a href="index.html" class="header_left"></a> 
-        <ul>
-            <li> <a href="./projects.html">WORK</a></li>
-            <li>ABOUT</li>
-            <li>CONTACT</li>
-        </ul>
-    </header>
+             <ul>
+                 <li> <a href="./projects.html">WORK</a></li>
+                 <li> <a href="./about.html"> ABOUT</a></li>
+                 <li><a href=""> CONTACT</a></li>
+             </ul>
+     </header>
     <aside class="contact">
         <div class="contact_icons">
             <div class="twitter"></div>
@@ -34,7 +37,9 @@
     </aside>
     <div class="project_page_heading">
         <h1 style=" text-align: center;font-size: 75px;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;margin: 100px 0px 50px 50px;">“Design is so simple. That’s why it’s so complicated.”</h1><p style="text-align: center;font-size: larger;"> –Paul Rand </p>
+        <hr style="background-color: black;width: calc(100% - 151px);">
         <p style="text-align: center; font-size: x-large;padding: 0 10%;line-height: 50px;margin: 10% auto;">Hey There ✌️<br>Here are few designs I made. Have a look. If you like my designs and want to work with me here's my <a href="mailto:pratikra2001@gmail.com" style="color: black;">Email</a> or just want to say hii my social media is on the left side of screen.</p>
+        <hr style="background-color: black;width: calc(100% - 151px);">
     </div>
 <section class="p1">
     <div class="project_no">
@@ -47,13 +52,13 @@
         <h5>FARMZONE</h5>
         <h1>E-Commerce Website</h1>
         <hr>
-        <p style="margin: 3% auto;padding: 0% 50%;padding-left: 0%;">Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness. But it is not made for any client it is designed for my university project. I used html, css and bit of javascript in the project. Please remember it is only design without any backend so some function may be restricted.</p>
+        <p style="margin: 3% auto;padding: 0% 26%;padding-left: 0%;line-height: 25px;font-size: 20px;">Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness. But it is not made for any client it is designed for my university project. I used html, css and bit of javascript in the project. Please remember it is only design without any backend so some function may be restricted.</p>
         <a href=""class="redirect_button" style="margin: 0%;">To Website
             <div class="arrow"></div>
         </a>
     </div>
 </section>
-<section class="p1">
+<!-- <section class="p1">
     <div class="project_no">
         <hr> <h1>02</h1>
     </div>
@@ -69,7 +74,7 @@
             <div class="arrow"></div>
         </a>
     </div>
-</section>
+</section> -->
 
 </body>
 </html>
