made index page responsive

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" media="screen and (max-width: 1100px)" href="css/widescreen.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+      <link rel="stylesheet" media="screen and (max-width: 1100px)" href="css/widescreen.css">
 <link rel="stylesheet" media="screen and (max-width: 925px)" href="css/tablet.css">
 <link rel="stylesheet" media="screen and (max-width: 770px)" href="css/tablet2.css">
 <link rel="stylesheet" media="screen and (max-width: 665px)" href="css/mobile.css">
@@ -65,46 +67,32 @@
             <a class="gmail" href="mailto:pratikra2001@gmail.com"></a>
         </div>
     </aside>
-    <div class="project_page_heading">
-        <h1 style=" text-align: center;font-size: 75px;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;margin: 100px 0px 50px 50px;">“Design is so simple. That’s why it’s so complicated.”</h1><p style="text-align: center;font-size: larger;"> –Paul Rand </p>
-        <hr style="background-color: black;width: calc(100% - 151px);">
-        <p style="text-align: center; font-size: x-large;padding: 0 10%;line-height: 50px;margin: 10% auto;">Hey There ✌️<br>Here are few designs I made. Have a look. If you like my designs and want to work with me here's my <a href="mailto:pratikra2001@gmail.com" style="color: black;">Email</a> or just want to say hii my social media is on the left side of screen.</p>
-        <hr style="background-color: black;width: calc(100% - 151px);">
-    </div>
-<section class="p1">
-    <div class="project_no">
-        <hr> <h1>01</h1>
-    </div>
-    <a href="./projects/farmzon/" class="pc_screen" style="color: black;">
-        <div class="screen"></div> 
-    </a>
-    <div class="project_title" style="width: auto;margin-top: 5%;">
-        <h5>FARMZONE</h5>
-        <h1>E-Commerce Website</h1>
-        <hr>
-        <p style="margin: 3% auto;padding: 0% 26%;padding-left: 0%;line-height: 25px;font-size: 20px;">Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness. But it is not made for any client it is designed for my university project. I used html, css and bit of javascript in the project. Please remember it is only design without any backend so some function may be restricted.</p>
-        <a href=""class="redirect_button" style="margin: 0%;">To Website
-            <div class="arrow"></div>
-        </a>
-    </div>
-</section>
-<!-- <section class="p1">
-    <div class="project_no">
-        <hr> <h1>02</h1>
-    </div>
-    <a href="./projects/farmzon/" class="pc_screen" style="color: black;">
-        <div class="screen"></div> 
-    </a>
-    <div class="project_title" style="width: auto;margin-top: 5%;">
-        <h5>FARMZONE</h5>
-        <h1>E-Commerce Website</h1>
-        <hr>
-        <p style="margin: 3% auto;padding: 0% 50%;padding-left: 0%;">Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness. But it is not made for any client it is design for my university project. I used html, css and bit of javascript in the project. </p>
-        <a href=""class="redirect_button" style="margin: 0%;">To Website
-            <div class="arrow"></div>
-        </a>
-    </div>
-</section> -->
-
+    <section class="c1">
+        <div class="c11">
+            <h1 style="font-size: xxx-large;text-align: center;margin-top: 80px;">Contact me 
+                <span class="material-icons" style="font-size: 50px;">
+                support_agent
+                </span>
+            </h1>
+            <div class="contact_details">
+                <div class="cont"> 
+                    <span class="material-icons" style="font-size: 50px;">
+                        email
+                        </span>
+                    <h1>Want to work with me on a project <br> or <br> Have a Querry? </h1> 
+                    <a href="">Email</a></div>
+                <div class="cont">
+                    <span class="material-icons" style="font-size: 50px;">
+                        person_add
+                        </span>
+                    <h1>Want to stay connected for the future project</h1>
+                    <div class="social_med">
+                        <a href="">Twitter</a><a href="">Instgram</a><a href="">Linkedin</a><a href="">Facebook</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="c12"></div>
+    </section>
 </body>
 </html>
