--- a/about.html
+++ b/about.html
@@ -17,6 +17,10 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+<link rel="stylesheet" media="screen and (max-width: 1100px)" href="css/widescreen.css">
+<link rel="stylesheet" media="screen and (max-width: 925px)" href="css/tablet.css">
+<link rel="stylesheet" media="screen and (max-width: 770px)" href="css/tablet2.css">
+<link rel="stylesheet" media="screen and (max-width: 665px)" href="css/mobile.css">
 <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <title>Pratik Raut</title>
 </head>
@@ -26,8 +30,34 @@
             <ul>
                 <li> <a href="./projects.html">WORK</a></li>
                 <li> <a href="./about.html"> ABOUT</a></li>
-                <li><a href=""> CONTACT</a></li>
+                <li><a href="./contact.html"> CONTACT</a></li>
             </ul>
+            <div class="menu" id="menu" >
+                <div class="menu_overall" onclick="ham()">
+                    <div class="menu_icon"></div>
+                    <div class="menu_icon"></div>
+                    <div class="menu_icon"></div>
+                </div>
+                <div class="menu_elements" id="menu_elements">
+                    <ul>
+                        <a href="projects.html"><li> Work</li></a>
+                        <a href="about.html"><li>About</li></a>
+                        <a href="contact.html"><li>Contact</li></a>
+                    </ul>
+                </div>
+                <script>
+                    let x=document.getElementById("menu_elements");
+                   function ham(){
+                       if(x.style.display=="block"){
+                    x.style.display="none";
+                }
+                else{
+                    x.style.display="block";
+                    
+                    }
+                }
+                </script>
+            </div>
     </header>
     <aside class="contact">
         <div class="contact_icons">
