made whole website responsive

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
         </div>
     </aside>
     <div class="project_page_heading">
-        <h1 style=" text-align: center;font-size: 75px;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;margin: 100px 0px 50px 50px;">“Design is so simple. That’s why it’s so complicated.”</h1><p style="text-align: center;font-size: larger;"> –Paul Rand </p>
+        <h1 class="quote">“Design is so simple. That’s why it’s so complicated.”</h1><p style="text-align: center;font-size: larger;"> –Paul Rand </p>
         <hr style="background-color: black;width: calc(100% - 151px);">
         <p style="text-align: center; font-size: x-large;padding: 0 10%;line-height: 50px;margin: 10% auto;">Hey There ✌️<br>Here are few designs I made. Have a look. If you like my designs and want to work with me here's my <a href="mailto:pratikra2001@gmail.com" style="color: black;">Email</a> or just want to say hii my social media is on the left side of screen.</p>
         <hr style="background-color: black;width: calc(100% - 151px);">
@@ -75,7 +75,21 @@
     <div class="project_no">
         <hr> <h1>01</h1>
     </div>
-    <a href="./projects/farmzon/" class="pc_screen" style="color: black;">
+    <h1 style="text-align: center;">PROJECTS</h1>
+    <section class="s2">
+        <a href="./projects/farmzon/" class="project_img"></a>
+        <div class="project_title">
+            <h5>FARMZON</h5>
+            <h1>E-Commerce Website</h1>
+            <hr>
+            <p>Our website is used to decrease the effort,time and money of the farmers and help them to grow their buisness</p>
+            <a href="./projects/farmzon/" class="redirect_button">To Website
+                <div class="arrow"></div>
+            </a>
+        </div>
+    </section>
+    
+    <!-- <a href="./projects/farmzon/" class="pc_screen" style="color: black;">
         <div class="screen"></div> 
     </a>
     <div class="project_title" style="width: auto;margin-top: 5%;">
@@ -86,7 +100,7 @@
         <a href=""class="redirect_button" style="margin: 0%;">To Website
             <div class="arrow"></div>
         </a>
-    </div>
+    </div> -->
 </section>
 <!-- <section class="p1">
     <div class="project_no">
