--- a/contact.html
+++ b/contact.html
@@ -80,14 +80,14 @@
                         email
                         </span>
                     <h1>Want to work with me on a project <br> or <br> Have a Querry? </h1> 
-                    <a href="">Email</a></div>
+                    <a href="mailto:pratikra2001@gmail.com">Email</a></div>
                 <div class="cont">
                     <span class="material-icons" style="font-size: 50px;">
                         person_add
                         </span>
                     <h1>Want to stay connected for the future project</h1>
                     <div class="social_med">
-                        <a href="">Twitter</a><a href="">Instgram</a><a href="">Linkedin</a><a href="">Facebook</a>
+                        <a href="">Twitter</a><a href="https://www.instagram.com/pratik_1354/">Instgram</a><a href="">Linkedin</a><a href="https://www.facebook.com/PratikRaut123">Facebook</a>
                     </div>
                 </div>
             </div>
