--- a/projects.html
+++ b/projects.html
@@ -71,11 +71,11 @@
         <p style="text-align: center; font-size: x-large;padding: 0 10%;line-height: 50px;margin: 10% auto;">Hey There ✌️<br>Here are few designs I made. Have a look. If you like my designs and want to work with me here's my <a href="mailto:pratikra2001@gmail.com" style="color: black;">Email</a> or just want to say hii my social media is on the left side of screen.</p>
         <hr style="background-color: black;width: calc(100% - 151px);">
     </div>
+    <h1 style="text-align: center;margin-top: 5%;">PROJECTS</h1>
 <section class="p1">
     <div class="project_no">
         <hr> <h1>01</h1>
     </div>
-    <h1 style="text-align: center;">PROJECTS</h1>
     <section class="s2">
         <a href="./projects/farmzon/" class="project_img"></a>
         <div class="project_title">
